--- a/src/main/webapp/resources/css/order_det.css
+++ b/src/main/webapp/resources/css/order_det.css
@@ -16,8 +16,15 @@
     color: #777;
 }
 
-.order__header a{
+.order__title__detail a,
+.tb__order a{
     text-decoration: none;
+    color: black;
+}
+
+.priceFormat {
+    font-size: 16px;
+    font-weight: 600;
     color: black;
 }
 
@@ -27,8 +34,9 @@
 }
 
 .tb__order td {
-    padding: 15px 0;
+    padding: 18px 0;
     vertical-align: middle;
+    font-size: 16px;
 }
 
 .tb__order hr {
@@ -44,7 +52,7 @@
 
 .tb__order thead th {
     padding: 11px 0;
-    background-color: #183c21;
+    background-color: #333;
     color: white;
     border-top: 2px solid #000;
     border-bottom: 1px solid #e5e5e5;
@@ -89,8 +97,8 @@
 }
 
 .tb__order img {
-    height: 80px;
-    width: 80px;
+    height: 110px;
+    width: 110px;
 }
 
 
@@ -124,9 +132,11 @@
 
 .tb__order tfoot td,
 .tb__order tfoot tr{
-    border-bottom: 1px solid #a3a3a3;
+    border-bottom: 1px solid black;
     padding: 10px;
+    text-align: left;
 }
+
 /* end 2024.05.25[혁락] css 이동 - order.css */
 
 /* 2024.05.25[혁락] css 이동 - <style> embedded */
@@ -281,6 +291,7 @@ ul {
     max-width: 600px;
     border-radius: 8px;
     position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .modal-header {
@@ -334,7 +345,6 @@ ul {
     padding: 10px;
     text-align: left;
 }
-
 .order-step-table th {
     background-color: #f4f4f4;
     text-align: center;
