--- a/src/main/webapp/resources/css/payStyle.css
+++ b/src/main/webapp/resources/css/payStyle.css
@@ -55,9 +55,7 @@
 .wrapper__parent {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  padding-bottom: 150px;
 }
 
 :root {
@@ -113,8 +111,7 @@
   --blue900: #194aa6;
 }
 
-body,
-html {
+.order__payment{
   font-family: Toss Product Sans, Tossface, -apple-system, BlinkMacSystemFont, Bazier Square, Noto Sans KR, Segoe UI, Apple SD Gothic Neo, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
     Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   -moz-osx-font-smoothing: grayscale;
@@ -123,11 +120,14 @@ html {
   word-wrap: break-word;
 }
 
+
+/*
 *,
 :after,
 :before {
   box-sizing: border-box;
 }
+*/
 
 .wrapper__parent .button {
   /*color: #f9fafb;*/
