--- a/src/main/webapp/resources/css/adminDefaultTable.css
+++ b/src/main/webapp/resources/css/adminDefaultTable.css
@@ -2,7 +2,7 @@
 table {
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     font-size: 12px;
 }
 
